Updated CORS config